Translations and log reporting upgrade - Update minor translations and fix TX settings - Fix order Application settings to avoid using wrong data - More detailled debug on sending log - Set sending log feedback to be copyable in order to be allowing to use the link without using a mailer - Remove feedback text when chaging tabs

--- a/.tx/config
+++ b/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 
 [linphone-desktop.ts]
-file_filter = assets/languages/<lang>.ts
-source_file = assets/languages/en.ts
+file_filter = linphone-app/assets/languages/<lang>.ts
+source_file = linphone-app/assets/languages/en.ts
 source_lang = en
 type = QT
