Add code signing support for Linux and Windows - Add Signing info in CI : use Key for Linux, folder for Windows - Update create appimage for takking account of key - Use appimagetool in addition of linuxdeploy for code signing step if needed

--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -112,7 +112,7 @@ job-windows-vs2017-package:
       - $NIGHTLY_MASTER
       - $DEPLOY_WINDOWS
   variables:
-      CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+      CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_WINDOWS_SIGNING_DIR=$WINDOWS_SIGNING_DIRECTORY
   script:
     - SET Qt5_DIR=C:\Qt\5.12.5\msvc2017\lib\cmake
     - SET PATH=%PATH%;C:\Qt\5.12.5\msvc2017\bin
