--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -292,7 +292,7 @@ if(${ENABLE_APP_PACKAGING})
 	set(CPACK_PACKAGE_VERSION_MAJOR ${LINPHONE_MAJOR_VERSION})
 	set(CPACK_PACKAGE_VERSION_MINOR ${LINPHONE_MINOR_VERSION})
 	if (LINPHONE_MICRO_VERSION)
-	  set(CPACK_PACKAGE_VERSION_PATCH ${LINPHONE_MICRO_VERSION})
+		set(CPACK_PACKAGE_VERSION_PATCH ${LINPHONE_MICRO_VERSION})
 	endif ()
 	set(CPACK_PACKAGE_EXECUTABLES "${EXECUTABLE_NAME};${APPLICATION_NAME}")
 	set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/../../../LICENSE.txt")
@@ -301,79 +301,81 @@ if(${ENABLE_APP_PACKAGING})
 	set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
 	
 	if (APPLE)
-	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}-mac")
-	  set(CPACK_DMG_BACKGROUND_IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/macos/background_dmg.jpg")
-	  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/macos/linphone_dmg.scpt.in" "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt" @ONLY)
-	  set(CPACK_DMG_DS_STORE_SETUP_SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt")
-	  set(CPACK_BINARY_DRAGNDROP ON)
-	  message(STATUS "Set DragNDrop CPack generator in OUTPUT/Packages")
+		set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}-mac")
+		set(CPACK_DMG_BACKGROUND_IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/macos/background_dmg.jpg")
+		configure_file("${CMAKE_CURRENT_SOURCE_DIR}/macos/linphone_dmg.scpt.in" "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt" @ONLY)
+		set(CPACK_DMG_DS_STORE_SETUP_SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt")
+		set(CPACK_BINARY_DRAGNDROP ON)
+		message(STATUS "Set DragNDrop CPack generator in OUTPUT/Packages")
 	elseif(NOT(WIN32))
-	  set(DO_APPIMAGE YES)
-	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}")
-	  message(STATUS "Set AppImage CPack generator in OUTPUT/Packages")
+		set(DO_APPIMAGE YES)
+		set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}")
+		message(STATUS "Set AppImage CPack generator in OUTPUT/Packages")
 	else()
-	  set(CPACK_GENERATOR "NSIS")
-	  set(DO_GENERATOR YES)
-	  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}-win32")
-	  string(COMPARE EQUAL ${CPACK_GENERATOR} "NSIS" IS_NSIS)
-	  if (${IS_NSIS})
-	    set(PACKAGE_EXT "exe")
-	    # Use magic `NSIS.template.in` template from the current source directory to force uninstallation
-	    # and ensure that linphone is not running before installation.
-	    set(CPACK_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/windows")
-	    set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}\\\\windows\\\\nsis_banner.bmp")
-	    set(CPACK_NSIS_MUI_ICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
-	    set(CPACK_NSIS_MUI_UNIICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
-	    set(CPACK_NSIS_DISPLAY_NAME "${APPLICATION_NAME}")
-	    if (LINPHONE_MICRO_VERSION)
-	      set(CPACK_NSIS_PACKAGE_NAME "${APPLICATION_NAME} ${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}.${LINPHONE_MICRO_VERSION}")
-	    else ()
-	      set(CPACK_NSIS_PACKAGE_NAME "${APPLICATION_NAME} ${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}")
-	    endif ()
-	    set(CPACK_NSIS_URL_INFO_ABOUT ${APPLICATION_URL})
-	
-	    file(TO_NATIVE_PATH "${CMAKE_CURRENT_BINARY_DIR}" DOS_STYLE_BINARY_DIR)
-	    string(REPLACE "\\" "\\\\" ESCAPED_DOS_STYLE_BINARY_DIR "${DOS_STYLE_BINARY_DIR}")
-	    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/windows/install.nsi.in" "${CMAKE_CURRENT_BINARY_DIR}/install.nsi" @ONLY)
-	    set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "!include \\\"${ESCAPED_DOS_STYLE_BINARY_DIR}\\\\install.nsi\\\"")
-	    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/windows/uninstall.nsi.in" "${CMAKE_CURRENT_BINARY_DIR}/uninstall.nsi" @ONLY)
-	    set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "!include \\\"${ESCAPED_DOS_STYLE_BINARY_DIR}\\\\uninstall.nsi\\\"")
-	    set(CPACK_NSIS_EXECUTABLES_DIRECTORY "bin")
-	    set(CPACK_NSIS_MUI_FINISHPAGE_RUN "${EXECUTABLE_NAME}.exe")
-	    message(STATUS "Set NSIS CPack generator in OUTPUT/Packages")
-	  else ()
-	    set(PACKAGE_EXT "msi")
-	
-	    set(CPACK_WIX_UPGRADE_GUID "C748668E-53D0-4088-A548-E33A76615A3B")
-	    set(CPACK_WIX_PRODUCT_ICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
-	    set(CPACK_WIX_PROPERTY_ARPURLINFOABOUT "${APPLICATION_URL}")
-		message(STATUS "Set MSI CPack generator in OUTPUT/Packages")
-	    # TODO: Deal with install/uninstall.nsi
-	  endif ()
-	
-	  # Sign the installer.
-	  set(TIMESTAMP_URL "http://timestamp.verisign.com/scripts/timestamp.dll")
-	  set(PFX_FILE "${CMAKE_CURRENT_SOURCE_DIR}/sign/linphone.pfx")
-	  set(PASSPHRASE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/sign/passphrase.txt")
-	  get_filename_component(WINSDK_DIR "[HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Microsoft SDKs\\Windows;CurrentInstallFolder]" REALPATH CACHE)
-	  find_package(PythonInterp)
-	  find_program(SIGNTOOL signtool PATHS ${WINSDK_DIR}/${CMAKE_INSTALL_BINDIR})
-	  set(SIGNTOOL_COMMAND "${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/windows/signtool.py")
-	  set(PERFORM_SIGNING 0)
-	  if (EXISTS ${PFX_FILE})
-	    if (SIGNTOOL)
-	      set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} signtool sign /f ${PFX_FILE}")
-	      set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} /p ${PASSPHRASE_FILE}")
-	      set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} /t ${TIMESTAMP_URL}")
-	      message("Found signtool and certificate ${PFX_FILE}")
-	      set(PERFORM_SIGNING 1)
-	    else ()
-	      message(STATUS "Could not find signtool! Code signing disabled (${SIGNTOOL})")
-	    endif ()
-	  else ()
-	    message(STATUS "No signtool certificate found; assuming development machine (${PFX_FILE})")
-	  endif ()
-	endif ()
+		set(CPACK_GENERATOR "NSIS")
+		set(DO_GENERATOR YES)
+		set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}-win32")
+		string(COMPARE EQUAL ${CPACK_GENERATOR} "NSIS" IS_NSIS)
+		if (${IS_NSIS})
+			set(PACKAGE_EXT "exe")
+			# Use magic `NSIS.template.in` template from the current source directory to force uninstallation
+			# and ensure that linphone is not running before installation.
+			set(CPACK_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/windows")
+			set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}\\\\windows\\\\nsis_banner.bmp")
+			set(CPACK_NSIS_MUI_ICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
+			set(CPACK_NSIS_MUI_UNIICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
+			set(CPACK_NSIS_DISPLAY_NAME "${APPLICATION_NAME}")
+			if (LINPHONE_MICRO_VERSION)
+				set(CPACK_NSIS_PACKAGE_NAME "${APPLICATION_NAME} ${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}.${LINPHONE_MICRO_VERSION}")
+			else ()
+				set(CPACK_NSIS_PACKAGE_NAME "${APPLICATION_NAME} ${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}")
+			endif ()
+			set(CPACK_NSIS_URL_INFO_ABOUT ${APPLICATION_URL})
+			
+			file(TO_NATIVE_PATH "${CMAKE_CURRENT_BINARY_DIR}" DOS_STYLE_BINARY_DIR)
+			string(REPLACE "\\" "\\\\" ESCAPED_DOS_STYLE_BINARY_DIR "${DOS_STYLE_BINARY_DIR}")
+			configure_file("${CMAKE_CURRENT_SOURCE_DIR}/windows/install.nsi.in" "${CMAKE_CURRENT_BINARY_DIR}/install.nsi" @ONLY)
+			set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "!include \\\"${ESCAPED_DOS_STYLE_BINARY_DIR}\\\\install.nsi\\\"")
+			configure_file("${CMAKE_CURRENT_SOURCE_DIR}/windows/uninstall.nsi.in" "${CMAKE_CURRENT_BINARY_DIR}/uninstall.nsi" @ONLY)
+			set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "!include \\\"${ESCAPED_DOS_STYLE_BINARY_DIR}\\\\uninstall.nsi\\\"")
+			set(CPACK_NSIS_EXECUTABLES_DIRECTORY "bin")
+			set(CPACK_NSIS_MUI_FINISHPAGE_RUN "${EXECUTABLE_NAME}.exe")
+			message(STATUS "Set NSIS CPack generator in OUTPUT/Packages")
+		else ()
+			set(PACKAGE_EXT "msi")
+			
+			set(CPACK_WIX_UPGRADE_GUID "C748668E-53D0-4088-A548-E33A76615A3B")
+			set(CPACK_WIX_PRODUCT_ICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
+			set(CPACK_WIX_PROPERTY_ARPURLINFOABOUT "${APPLICATION_URL}")
+			message(STATUS "Set MSI CPack generator in OUTPUT/Packages")
+			# TODO: Deal with install/uninstall.nsi
+		endif ()
+		
+		if(${LINPHONE_WINDOWS_SIGNING_DIR})
+			# Sign the installer.
+			set(TIMESTAMP_URL "http://timestamp.verisign.com/scripts/timestamp.dll")
+			set(PFX_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}/linphone.pfx")
+			set(PASSPHRASE_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}/passphrase.txt")
+			get_filename_component(WINSDK_DIR "[HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Microsoft SDKs\\Windows;CurrentInstallFolder]" REALPATH CACHE)
+			find_package(PythonInterp)
+			find_program(SIGNTOOL signtool PATHS ${WINSDK_DIR}/${CMAKE_INSTALL_BINDIR})
+			set(SIGNTOOL_COMMAND "${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/windows/signtool.py")
+			set(PERFORM_SIGNING 0)
+			if (EXISTS ${PFX_FILE})
+				if (SIGNTOOL)
+					set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} signtool sign /f ${PFX_FILE}")
+					set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} /p ${PASSPHRASE_FILE}")
+					set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} /t ${TIMESTAMP_URL}")
+					message("Found signtool and certificate ${PFX_FILE}")
+					set(PERFORM_SIGNING 1)
+				else ()
+					message(STATUS "Could not find signtool! Code signing disabled (${SIGNTOOL})")
+				endif ()
+			else ()
+				message(STATUS "No signtool certificate found; assuming development machine (${PFX_FILE})")
+			endif ()
+		endif ()
+	endif()
 	configure_file("${CMAKE_CURRENT_SOURCE_DIR}/packaging.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/packaging.cmake" @ONLY)
 	install(SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/packaging.cmake")
 	include(CPack)
