- Remove python script - Fix windows packaging

--- a/linphone-app/cmake_builder/linphone_package/packaging.cmake.in
+++ b/linphone-app/cmake_builder/linphone_package/packaging.cmake.in
@@ -70,7 +70,7 @@ if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
   endif()
   if (@PERFORM_SIGNING@)
     execute_process(
-      COMMAND @SIGNTOOL_COMMAND@ @CMAKE_CURRENT_BINARY_DIR@/@CPACK_PACKAGE_FILE_NAME@.@PACKAGE_EXT@
+      COMMAND @SIGNTOOL_COMMAND@ "@CPACK_PACKAGE_DIRECTORY@/@CPACK_PACKAGE_FILE_NAME@.@PACKAGE_EXT@"
       RESULT_VARIABLE SIGNING_RESULT
     )
     if(SIGNING_RESULT)
