- Remove python script - Fix windows packaging

--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -299,6 +299,7 @@ if(${ENABLE_APP_PACKAGING})
 	set(CPACK_PACKAGE_INSTALL_DIRECTORY "${APPLICATION_NAME}")
 	set(CPACK_PACKAGE_DIRECTORY "${CMAKE_INSTALL_PREFIX}/Packages")
 	set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/../../assets/icon.ico")
+	set(PERFORM_SIGNING 0)
 	
 	if (APPLE)
 		set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${PACKAGE_VERSION}-mac")
@@ -351,21 +352,16 @@ if(${ENABLE_APP_PACKAGING})
 			# TODO: Deal with install/uninstall.nsi
 		endif ()
 		
-		if(${LINPHONE_WINDOWS_SIGNING_DIR})
+		if(LINPHONE_WINDOWS_SIGNING_DIR)
 			# Sign the installer.
 			set(TIMESTAMP_URL "http://timestamp.verisign.com/scripts/timestamp.dll")
-			set(PFX_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}/linphone.pfx")
-			set(PASSPHRASE_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}/passphrase.txt")
+			set(PFX_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}\\linphone.pfx")
+			set(PASSPHRASE_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}\\passphrase.txt")
 			get_filename_component(WINSDK_DIR "[HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Microsoft SDKs\\Windows;CurrentInstallFolder]" REALPATH CACHE)
-			find_package(PythonInterp)
 			find_program(SIGNTOOL signtool PATHS ${WINSDK_DIR}/${CMAKE_INSTALL_BINDIR})
-			set(SIGNTOOL_COMMAND "${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/windows/signtool.py")
-			set(PERFORM_SIGNING 0)
 			if (EXISTS ${PFX_FILE})
 				if (SIGNTOOL)
-					set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} signtool sign /f ${PFX_FILE}")
-					set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} /p ${PASSPHRASE_FILE}")
-					set(SIGNTOOL_COMMAND "${SIGNTOOL_COMMAND} /t ${TIMESTAMP_URL}")
+					set(SIGNTOOL_COMMAND "signtool sign /f ${PFX_FILE} /p ${PASSPHRASE_FILE} /t ${TIMESTAMP_URL}")
 					message("Found signtool and certificate ${PFX_FILE}")
 					set(PERFORM_SIGNING 1)
 				else ()
