--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -368,7 +368,7 @@ if(${ENABLE_APP_PACKAGING})
 			find_program(SIGNTOOL signtool PATHS ${WINSDK_DIR}/${CMAKE_INSTALL_BINDIR})
 			if (EXISTS ${PFX_FILE})
 				if (SIGNTOOL)
-					set(SIGNTOOL_COMMAND "signtool sign /f ${PFX_FILE} /p ${PASSPHRASE_FILE} /t ${TIMESTAMP_URL}")
+					set(SIGNTOOL_COMMAND "set /p passphrase=<${PASSPHRASE_FILE} && signtool sign /f \"${PFX_FILE}\" /p %passphrase% /t \"${TIMESTAMP_URL}\"")
 					message("Found signtool and certificate ${PFX_FILE}")
 					set(PERFORM_SIGNING 1)
 				else ()
