Use / for paths and encapsulate it with quotes [ci skip]

--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -362,13 +362,13 @@ if(${ENABLE_APP_PACKAGING})
 		if(LINPHONE_WINDOWS_SIGNING_DIR)
 			# Sign the installer.
 			set(TIMESTAMP_URL "http://timestamp.verisign.com/scripts/timestamp.dll")
-			set(PFX_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}\\linphone.pfx")
-			set(PASSPHRASE_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}\\passphrase.txt")
+			set(PFX_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}/linphone.pfx")
+			set(PASSPHRASE_FILE "${LINPHONE_WINDOWS_SIGNING_DIR}/passphrase.txt")
 			get_filename_component(WINSDK_DIR "[HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Microsoft SDKs\\Windows;CurrentInstallFolder]" REALPATH CACHE)
 			find_program(SIGNTOOL signtool PATHS ${WINSDK_DIR}/${CMAKE_INSTALL_BINDIR})
 			if (EXISTS ${PFX_FILE})
 				if (SIGNTOOL)
-					set(SIGNTOOL_COMMAND "set /p passphrase=<${PASSPHRASE_FILE} && signtool sign /f \"${PFX_FILE}\" /p %passphrase% /t \"${TIMESTAMP_URL}\"")
+					set(SIGNTOOL_COMMAND "set /p passphrase=<\"${PASSPHRASE_FILE}\" && signtool sign /f \"${PFX_FILE}\" /p %passphrase% /t \"${TIMESTAMP_URL}\"")
 					message("Found signtool and certificate ${PFX_FILE}")
 					set(PERFORM_SIGNING 1)
 				else ()
