Fix file transfert and notification behaviour - Add External Image Provider to avoid having error message when we try to show a file that is not an image (used to show an attachment where it can be a regular file). - When creating an image, try to read the headers of a file when the extension is not consistent with contents. - Build if not exists, a thumbnail image if the file has been displayed when filling a message - When trying to open the file, test if it was downloaded by reading the flag - Add a status for File Transfert In Progress - Use non-deprecated function to get file path from ChatMessage - Use FileSize in addtion of content Size to get the full size of a message - Show a progressbar when downloading a file - Show the image in notification when downloaded or the file name if it is not an image

--- a/linphone-app/CMakeLists.txt
+++ b/linphone-app/CMakeLists.txt
@@ -99,6 +99,7 @@ set(SOURCES
     src/app/paths/Paths.cpp
     src/app/providers/AvatarProvider.cpp
     src/app/providers/ImageProvider.cpp
+    src/app/providers/ExternalImageProvider.cpp
     src/app/providers/ThumbnailProvider.cpp
     src/app/translator/DefaultTranslator.cpp
     src/components/assistant/AssistantModel.cpp
@@ -156,6 +157,7 @@ set(HEADERS
     src/app/paths/Paths.hpp
     src/app/providers/AvatarProvider.hpp
     src/app/providers/ImageProvider.hpp
+    src/app/providers/ExternalImageProvider.hpp
     src/app/providers/ThumbnailProvider.hpp
     src/app/single-application/SingleApplication.hpp
     src/app/translator/DefaultTranslator.hpp
