--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -71,11 +71,14 @@ job-centos7-ninja-gcc-package:
        - $NIGHTLY_MASTER
        - $DEPLOY_LINUX
   variables:
-    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_BUILDER_SIGNING_IDENTITY=$LINUX_SIGNING_KEY
+    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_BUILDER_SIGNING_IDENTITY=$GPG_SIGNING_KEYID -DLINPHONE_BUILDER_SIGNING_PASSPHRASE=$GPG_SIGNING_PASS
     CMAKE_GENERATOR: Ninja
     CC: gcc
     CXX: g++
   extends: .job-linux-desktop
+  script:
+    - gpg2 --pinentry-mode loopback --passphrase $GPG_SIGNING_PASS --import "$GPG_SIGNING_KEY"
+    - *build_all_linux_script
   artifacts:
     paths:
       - build/OUTPUT/Packages/*.AppImage
