--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -2,46 +2,21 @@
 # BUILD
 #################################################
 
-
-
-#################################################
-# VS2015
-#################################################
-#Wedo not need vs2015 anymore
-
-#job-windows-vs2015:
-#
-#  extends: .job-prepare
-#  stage: build
-#  tags: [ "windows" ]
-#  except:
-#    refs:
-#      - feature/peioMergeCi
-#
-#  except:
-#    variables:
-#      - $DEPLOY_RUN_ANDROID
-#      - $DEPLOY_RUN_IOS
-#  variables:
-#    CMAKE_OPTIONS: -DENABLE_LIME_X3DH=NO
-#
-#  script:
-#    - mkdir build-desktop
-#    - cd build-desktop
-#    - cmake .. -G "Visual Studio 14 2015" -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS%
-#   - cmake --build . --target sdk --config Release -- /maxcpucount
-
-#job-windows-vs2015-novideo:
-#
-#  only:
-#    - schedules
-#  except:
-#    variables:
-#      - $DEPLOY_RUN_ANDROID
-#      - $FAST_LINUX_TESTS
-#  variables:
-#    CMAKE_OPTIONS: -DENABLE_VIDEO=NO
-#  extends: job-windows-vs2015
+.build_all_windows_script: &build_all_windows_script |
+  SET Qt5_DIR=C:\Qt\5.12.5\msvc2017\lib\cmake
+  SET PATH=%PATH%;C:\Qt\5.12.5\msvc2017\bin
+  IF EXIST build RMDIR /S /Q build
+  mkdir build
+  cd build
+  mkdir OUTPUT
+#SDK  Building
+    #we launch the msvc-cl wrapper located in python scripts folder
+    #this wrapper relays only needed calls to the real compiler    
+    #cache stats display
+  C:\PROGRA~1\Python37\Scripts\cl -s    
+  cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
+  cmake --build . --target ALL_BUILD --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
+  C:\PROGRA~1\Python37\Scripts\cl -s
 
 .job-windows-vs2017:
   extends: .job-prepare
@@ -50,20 +25,7 @@
   variables:
     CMAKE_OPTIONS: -DENABLE_LIME_X3DH=NO -DENABLE_UNIT_TESTS=ON
   script:
-    - SET Qt5_DIR=C:\Qt\5.12.5\msvc2017\lib\cmake
-    - SET PATH=%PATH%;C:\Qt\5.12.5\msvc2017\bin
-    - IF EXIST build RMDIR /S /Q build
-    - mkdir build
-    - cd build
-    - mkdir OUTPUT
-#SDK  Building
-    #we launch the msvc-cl wrapper located in python scripts folder
-    #this wrapper relays only needed calls to the real compiler    
-    #cache stats display
-    - C:\PROGRA~1\Python37\Scripts\cl -s    
-    - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
-    - cmake --build . --target ALL_BUILD --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-    - C:\PROGRA~1\Python37\Scripts\cl -s
+   - *build_all_windows_script
   artifacts:
     paths:
       - build\OUTPUT
@@ -114,19 +76,7 @@ job-windows-vs2017-package:
   variables:
       CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES -DLINPHONE_WINDOWS_SIGNING_DIR=$WINDOWS_SIGNING_DIRECTORY
   script:
-    - SET Qt5_DIR=C:\Qt\5.12.5\msvc2017\lib\cmake
-    - SET PATH=%PATH%;C:\Qt\5.12.5\msvc2017\bin
-    - IF EXIST build RMDIR /S /Q build
-    - mkdir build
-    - cd build
-    - mkdir OUTPUT
-#SDK  Building
-    #we launch the msvc-cl wrapper located in python scripts folder
-    #this wrapper relays only needed calls to the real compiler    
-    #cache stats display
-    - C:\PROGRA~1\Python37\Scripts\cl -s    
-    - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release -DENABLE_APP_PACKAGING=YES %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
-    - cmake --build . --target ALL_BUILD --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
+    - *build_all_windows_script
     - C:\PROGRA~1\Python37\Scripts\cl -s
     - mkdir "%CI_PROJECT_DIR%/results"
     - cd OUTPUT
