--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -1,5 +1,15 @@
-include:
-  - 'job-linux-desktop.yml'
+.build_all_linux_script: &build_all_linux_script |
+  cmake --version
+  export CC=$CC
+  export CXX=$CXX
+  mkdir -p build/OUTPUT
+  echo $CMAKE_GENERATOR
+  echo $DEFAULT_LINUX_CMAKE_OPTIONS
+  echo $CMAKE_OPTIONS
+  echo $CMAKE_SANITIZER_OPTIONS
+  cd build
+  cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
+  cmake --build . --target all $LBC_NODEBUG_OPTIONS
 
 #job-centos7-makefile-gcc:
 
